--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,10 @@
 buildscript {
-    ext.kotlin_version = "1.3.61"
-    ext.kotlin_coroutine_version = "1.3.3"
+    ext {
+        kotlin_version = "1.3.61"
+        kotlin_coroutine_version = "1.3.3"
+
+        room_library_version = "2.2.3"
+    }
     repositories {
         google()
         jcenter()
