DrawerList: Fix incorrect avatar load & Update UI & New subscription
Signed-off-by: Siubeng Fung <fython@163.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,12 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".ui.NewSubscriptionActivity"
+            android:label="@string/new_subscription_title"
+            android:theme="@style/Theme.Danmaqua"
+            android:exported="false"/>
+
     </application>
 
 </manifest>
