--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
 
         <activity
             android:name=".ui.MainActivity"
+            android:launchMode="singleTop"
             android:theme="@style/Theme.Danmaqua.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
