--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,8 +51,10 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.fragment:fragment-ktx:1.2.0'
+    implementation 'androidx.preference:preference-ktx:1.1.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.preference:preference:1.1.0'
     implementation 'com.google.android.material:material:1.1.0-rc02'
 
     implementation "androidx.room:room-runtime:$room_library_version"
