Theme: Fix attributes & Fix cannot show floating window
Signed-off-by: Siubeng Fung <fython@163.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         <activity
             android:name=".ui.PreferenceActivity"
             android:label="@string/settings_title"
-            android:theme="@style/Theme.Danmaqua"
+            android:theme="@style/Theme.Danmaqua.NoActionBar"
             android:exported="true"/>
 
         <service
