--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.preference:preference:1.1.0'
     implementation 'com.google.android.material:material:1.2.0-alpha04'
+    implementation 'com.google.androidbrowserhelper:androidbrowserhelper:1.1.0'
 
     implementation "androidx.room:room-runtime:$room_library_version"
     kapt "androidx.room:room-compiler:$room_library_version"
