--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,11 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_library_version"
     implementation "androidx.room:room-ktx:$room_library_version"
 
+    implementation "moe.feng.common.eventshelper:events-annotation:$events_helper_version"
+    implementation "moe.feng.common.eventshelper:events-library-core:$events_helper_version"
+    kapt "moe.feng.common.eventshelper:events-compiler:$events_helper_version"
+    implementation "moe.feng.common.eventshelper:events-library-ktx:$events_helper_version"
+
     implementation 'com.drakeet.multitype:multitype:4.2.0'
 
     implementation 'com.squareup.okhttp3:okhttp:4.3.1'
