--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         kotlin_coroutine_version = "1.3.3"
 
         room_library_version = "2.2.3"
+        events_helper_version = "1.0.0-alpha4"
     }
     repositories {
         google()
@@ -19,6 +20,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://www.jitpack.io" }
+        maven { url 'https://dl.bintray.com/fython/EventsHelper' }
     }
 }
 
