--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.0-alpha09"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.3.3'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.0.0-beta02'
     }
 }
 
