IntroActivity: Add Intro
Signed-off-by: Siubeng Fung <fython@163.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
         </activity>
 
         <activity
+            android:name=".ui.IntroActivity"
+            android:theme="@style/Theme.Danmaqua.NoActionBar"
+            android:exported="false"/>
+
+        <activity
             android:name=".ui.NewSubscriptionActivity"
             android:label="@string/new_subscription_title"
             android:theme="@style/Theme.Danmaqua"
