NewSubscription: Add UI & recommendation api
Signed-off-by: Siubeng Fung <fython@163.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         <activity
             android:name=".ui.NewSubscriptionActivity"
             android:label="@string/new_subscription_title"
-            android:theme="@style/Theme.Danmaqua"
+            android:theme="@style/Theme.Danmaqua.NoActionBar"
             android:exported="false"/>
 
         <activity
