Subscription: Add Catalog API & UI
Signed-off-by: Siubeng Fung <fython@163.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,18 @@
             android:exported="false"/>
 
         <activity
+            android:name=".ui.VTubersCatalogActivity"
+            android:label="@string/view_vtubers_catalog_title"
+            android:theme="@style/Theme.Danmaqua.NoActionBar"
+            android:exported="false"/>
+
+        <activity
+            android:name=".ui.VTubersGroupActivity"
+            android:label="@string/view_vtubers_group_title"
+            android:theme="@style/Theme.Danmaqua.NoActionBar"
+            android:exported="false"/>
+
+        <activity
             android:name=".ui.PreferenceActivity"
             android:label="@string/settings_title"
             android:theme="@style/Theme.Danmaqua.NoActionBar"
