--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "moe.feng.danmaqua"
         minSdkVersion 23
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -46,6 +46,12 @@ android {
 
     androidExtensions {
         experimental = true
+    }
+
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
     }
 }
 
@@ -83,6 +89,8 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.tencent:mmkv-static:1.0.24'
+
+    implementation 'com.github.tony19:named-regexp:0.2.5'
 
     testImplementation 'junit:junit:4.13'
     testImplementation "androidx.room:room-testing:$room_library_version"
