--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         kotlin_coroutine_version = "1.3.3"
 
         room_library_version = "2.2.3"
-        events_helper_version = "1.0.0-alpha4"
+        events_helper_version = "1.0.2"
     }
     repositories {
         google()
