--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,23 @@
             android:theme="@style/Theme.Danmaqua.NoActionBar"
             android:exported="true"/>
 
+        <activity
+            android:name=".ui.B23ProxyActivity"
+            android:label="@string/handle_b23_url_title"
+            android:theme="@style/Theme.EmptyActivity"
+            android:enabled="false"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+
+                <data android:scheme="http" android:host="b23.tv" android:pathPattern="/av.*"/>
+                <data android:scheme="https" android:host="b23.tv" android:pathPattern="/av.*"/>
+            </intent-filter>
+        </activity>
+
         <service
             android:name=".service.DanmakuListenerService"
             android:label="@string/listener_service_label"
