--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.INSTALL_SHORTCUT"/>
+    <uses-permission android:name="android.permission.UNINSTALL_SHORTCUT"/>
 
     <application
         android:name=".DanmaquaApplication"
@@ -98,6 +100,17 @@
                 <category android:name="android.intent.category.DEFAULT"/>
 
                 <data android:mimeType="text/*"/>
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".ui.proxy.QuickStartShortcutActivity"
+            android:theme="@style/Theme.EmptyActivity"
+            android:excludeFromRecents="true"
+            android:noHistory="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
             </intent-filter>
         </activity>
 
