--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,9 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_library_version"
     implementation "androidx.room:room-ktx:$room_library_version"
 
+    implementation "androidx.work:work-runtime:$work_version"
+    implementation "androidx.work:work-runtime-ktx:$work_version"
+
     implementation "moe.feng.common.eventshelper:events-annotation:$events_helper_version"
     implementation "moe.feng.common.eventshelper:events-library-core:$events_helper_version"
     kapt "moe.feng.common.eventshelper:events-compiler:$events_helper_version"
