--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,12 @@
             android:exported="true"/>
 
         <activity
+            android:name=".ui.history.ManageHistoryActivity"
+            android:label="@string/danmaku_history_title"
+            android:theme="@style/Theme.Danmaqua.NoActionBar"
+            android:exported="false"/>
+
+        <activity
             android:name=".ui.proxy.B23ProxyActivity"
             android:label="@string/proxy_b23_url_title"
             android:theme="@android:style/Theme.NoDisplay"
