--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -125,6 +125,16 @@
             android:label="@string/listener_service_label"
             android:foregroundServiceType="dataSync"
             android:exported="false"/>
+        
+        <provider
+            android:authorities="moe.feng.danmaqua.fileprovider"
+            android:name="androidx.core.content.FileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/fileprovider"/>
+        </provider>
 
     </application>
 
