--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,10 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
+        dataBinding {
+            enabled = true
+        }
+
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = [
