Project: Refactor packages
Signed-off-by: Siubeng Fung <fython@163.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
         </activity>
 
         <activity
-            android:name=".ui.IntroActivity"
+            android:name=".ui.intro.IntroActivity"
             android:theme="@style/Theme.Danmaqua.NoActionBar"
             android:exported="false"/>
 
