--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,49 +72,50 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutine_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutine_version"
+    implementation deps.kotlin.stdlib
+    implementation deps.kotlin.coroutines_core
+    implementation deps.kotlin.coroutines_android
 
     implementation project(':library-ktx')
 
-    implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'androidx.fragment:fragment-ktx:1.2.2'
-    implementation 'androidx.preference:preference-ktx:1.1.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.drawerlayout:drawerlayout:1.1.0-alpha03'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'androidx.preference:preference:1.1.0'
-    implementation 'com.google.android.material:material:1.2.0-alpha05'
-    implementation 'com.google.androidbrowserhelper:androidbrowserhelper:1.1.0'
+    implementation deps.androidx.ktx.core
+    implementation deps.androidx.ktx.fragment
+    implementation deps.androidx.ktx.preference
+    implementation deps.androidx.ktx.room
+    implementation deps.androidx.ktx.work
 
-    implementation 'com.google.firebase:firebase-analytics:17.2.2'
-    implementation 'com.google.firebase:firebase-crashlytics:17.0.0-beta01'
-    implementation 'com.google.firebase:firebase-perf:19.0.5'
+    implementation deps.androidx.appcompat
+    implementation deps.androidx.drawerlayout
+    implementation deps.androidx.recyclerview
+    implementation deps.androidx.preference
+    implementation deps.androidx.materialcomponents
+    implementation deps.androidx.browserhelper
 
-    implementation "androidx.room:room-runtime:$room_library_version"
-    kapt "androidx.room:room-compiler:$room_library_version"
-    implementation "androidx.room:room-ktx:$room_library_version"
+    implementation deps.google.firebase.analytics
+    implementation deps.google.firebase.crashlytics
+    implementation deps.google.firebase.pref
 
-    implementation "androidx.work:work-runtime:$work_version"
-    implementation "androidx.work:work-runtime-ktx:$work_version"
+    implementation deps.androidx.room.runtime
+    kapt deps.androidx.room.compiler
 
-    implementation "moe.feng.common.eventshelper:events-annotation:$events_helper_version"
-    implementation "moe.feng.common.eventshelper:events-library-core:$events_helper_version"
-    kapt "moe.feng.common.eventshelper:events-compiler:$events_helper_version"
-    implementation "moe.feng.common.eventshelper:events-library-ktx:$events_helper_version"
+    implementation deps.androidx.work.runtime
 
-    implementation 'com.drakeet.multitype:multitype:4.2.0'
+    implementation deps.eventshelper.annotation
+    implementation deps.eventshelper.core
+    kapt deps.eventshelper.compiler
+    implementation deps.eventshelper.ktx
 
-    implementation 'com.squareup.okhttp3:okhttp:4.3.1'
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.tencent:mmkv-static:1.0.24'
+    implementation deps.multitype
 
-    implementation 'com.github.tony19:named-regexp:0.2.5'
+    implementation deps.okhttp.core
+    implementation deps.picasso
+    implementation deps.gson
+    implementation deps.mmkv
 
-    testImplementation 'junit:junit:4.13'
-    testImplementation "androidx.room:room-testing:$room_library_version"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation deps.namedregexp
+
+    testImplementation deps.junit
+    testImplementation deps.androidx.room.testing
+    androidTestImplementation deps.androidx.test.junit
+    androidTestImplementation deps.androidx.test.espresso
 }
