--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,18 @@
 buildscript {
-    ext {
-        kotlin_version = "1.3.61"
-        kotlin_coroutine_version = "1.3.3"
+    apply from: rootProject.file('buildSrc/dependencies.gradle')
 
-        room_library_version = "2.2.4"
-        events_helper_version = "1.0.2"
-        work_version = "2.3.2"
+    ext {
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.0-beta01'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.3.3'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.0.0-beta02'
-        classpath 'com.google.firebase:perf-plugin:1.3.1'
+        classpath deps.android.gradle_plugin
+        classpath deps.kotlin.gradle_plugin
+        classpath deps.google.gms_plugin
+        classpath deps.google.firebase.crashlytics_plugin
+        classpath deps.google.firebase.perf_plugin
     }
 }
 
