MainActivity: Move FilterMenu to dialog fragment
Signed-off-by: Siubeng Fung <fython@163.com>

--- a/buildSrc/dependencies.gradle
+++ b/buildSrc/dependencies.gradle
@@ -7,7 +7,7 @@ ext {
 
     deps = [
         android     : [
-            gradle_plugin: "com.android.tools.build:gradle:4.0.0-beta01"
+            gradle_plugin: "com.android.tools.build:gradle:4.1.0-alpha01"
         ],
         androidx    : [
             ktx               : [
