--- a/buildSrc/dependencies.gradle
+++ b/buildSrc/dependencies.gradle
@@ -1,5 +1,5 @@
 ext {
-    kotlin_version = "1.3.61"
+    kotlin_version = "1.3.70"
     kotlin_coroutine_version = "1.3.3"
     room_library_version = "2.2.4"
     events_helper_version = "1.0.3"
@@ -7,7 +7,7 @@ ext {
 
     deps = [
         android     : [
-            gradle_plugin: "com.android.tools.build:gradle:4.1.0-alpha02"
+            gradle_plugin: "com.android.tools.build:gradle:3.6.1"
         ],
         androidx    : [
             ktx               : [
